Add comprehensive tests for JWT, password, tenant, and user services
- Implement tests for JWTService including token creation, verification, and expiration checks.
- Add tests for PasswordService covering password hashing, verification, and temporary password generation.
- Create tests for TenantRepository to validate tenant creation, retrieval, and existence checks.
- Enhance UserRepository tests to include user creation, retrieval by various attributes, pagination, and role counting.
- Ensure all tests cover edge cases and error handling for robustness
- Still working on it, specially on tests i got like 14 failed with 2 warnings, got 113 passed tho

🚧🏗️

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,15 @@ psycopg2-binary==2.9.9
 python-dotenv==1.0.0
 alembic==1.13.1
 email-validator==2.1.0
+python-multipart==0.0.6
 
-# Optional dependencies for testing and development
+# Authentication & Security
+passlib[bcrypt]==1.7.4
+pyjwt==2.8.0
+python-multipart==0.0.6
+cryptography==41.0.7 
+
+# Testing
 pytest==7.4.3
 pytest-asyncio==0.21.1
 httpx==0.25.2
