Add comprehensive tests for user and tenant entities, authentication service, and JWT service
- Implement tests for UserUseCases including user creation, retrieval, and validation of existing users.
- Create tests for Tenant entity ensuring correct initialization and behavior of methods.
- Develop extensive tests for User entity covering creation, role management, and status checks.
- Add tests for AuthService to validate user authentication, token generation, and registration completion.
- Enhance JWTService tests to verify token creation with custom expiration times.

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,4 +3,16 @@ testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-addopts = -v --tb=short
+addopts = 
+    -v
+    --tb=short
+    --strict-markers
+    --disable-warnings
+markers =
+    unit: Unit tests
+    integration: Integration tests
+    api: API tests
+    application: Application layer tests
+    domain: Domain layer tests
+    infrastructure: Infrastructure layer tests
+    slow: Slow running tests
