--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ python-dotenv==1.0.0
 alembic==1.13.1
 email-validator==2.1.0
 python-multipart==0.0.6
+asyncpg==0.28.0
 
 # Authentication & Security
 passlib[bcrypt]==1.7.4
