--- a/pytest.ini
+++ b/pytest.ini
@@ -3,11 +3,13 @@ testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
+
 addopts = 
     -v
     --tb=short
     --strict-markers
     --disable-warnings
+    
 markers =
     unit: Unit tests
     integration: Integration tests
@@ -16,3 +18,14 @@ markers =
     domain: Domain layer tests
     infrastructure: Infrastructure layer tests
     slow: Slow running tests
+
+    integration: marks tests as integration tests (deselect with '-m "not integration"')
+    unit: marks tests as unit tests
+    slow: marks tests as slow (deselect with '-m "not slow"')
+
+asyncio_mode = auto
+
+log_cli = true
+log_cli_level = INFO
+log_cli_format = %(asctime)s [%(levelname)8s] %(name)s: %(message)s
+log_cli_date_format = %Y-%m-%d %H:%M:%S
