--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,13 @@ python-multipart==0.0.6
 cryptography==41.0.7 
 
 # Testing
+##Unit
 pytest==7.4.3
 pytest-asyncio==0.21.1
+pytest-cov==4.1.0
+pytest-mock==3.11.1
+aiosqlite==0.19.0
 httpx==0.25.2
+##Integration
+factory-boy==3.3.0
+faker==20.1.0
