--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,13 @@ sqlalchemy==2.0.23
 pydantic==2.7.3
 pydantic[email]==2.7.3
 psycopg2-binary==2.9.9
+psycopg[binary]==3.1.10
 python-dotenv==1.0.0
 alembic==1.13.1
 email-validator==2.1.0
 python-multipart==0.0.6
 asyncpg==0.28.0
+pydantic-settings
 
 # Authentication & Security
 passlib[bcrypt]==1.7.4
