move the alembic to db folder for cleaner ddd, made a script for easy alembic commands

--- a/.env.example
+++ b/.env.example
@@ -35,7 +35,7 @@ ENVIRONMENT=development
 LOG_LEVEL=INFO
 
 #OAuth2 Configuration
-GOOGLE_CLIENT_ID=4
+GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
