working email service

--- a/.env.example
+++ b/.env.example
@@ -46,5 +46,18 @@ MICROSOFT_CLIENT_SECRET=
 GOOGLE_OAUTH_REDIRECT_URL=http://localhost:8000/api/v1/auth/oauth/google/callback
 GITHUB_OAUTH_REDIRECT_URL=http://localhost:8000/api/v1/auth/oauth/github/callback
 MICROSOFT_OAUTH_REDIRECT_URL=http://localhost:8000/api/v1/auth/oauth/microsoft/callback
+
+# Application URLs
 FRONTEND_URL=http://localhost:3000
 BACKEND_URL=http://localhost:8000
+
+# Email Configuration (Mailtrap)
+SMTP_HOST=sandbox.smtp.mailtrap.io
+SMTP_PORT=2525
+SMTP_USERNAME=
+SMTP_PASSWORD=
+SMTP_USE_TLS=true
+
+# Email Defaults
+DEFAULT_FROM_EMAIL=admin@salesoptimizer.com
+DEFAULT_FROM_NAME=SalesOptimizer
