--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ email-validator==2.1.0
 python-multipart==0.0.6
 asyncpg==0.28.0
 pydantic-settings
+aiosmtplib
+jinja2
 
 # Authentication & Security
 passlib[bcrypt]==1.7.4
