working frontend and backend integration 🚀

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,23 @@
 # Sales Optimizer Application Configuration
 
+# Environment Configuration
+ENVIRONMENT=development
+DEBUG=true
+LOG_LEVEL=INFO
+
+# Application URLs
+FRONTEND_URL=http://localhost:3000
+BACKEND_URL=http://localhost:8000
+
 # Database configuration
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_NAME=salesoptimizer_db
 DATABASE_USER=postgres
 DATABASE_PASSWORD=
+
+# Alternative: Use full DATABASE_URL instead of individual components
+# DATABASE_URL=postgresql://postgres@localhost:5432/salesoptimizer_db
 
 # Redis configuration
 REDIS_URL=redis://localhost:6379/0
@@ -16,25 +28,17 @@ REDIS_URL=redis://localhost:6379/0
 # For Redis Cloud or external service
 # REDIS_URL=rediss://username:password@redis-cloud:6380/0
 
-
-# DATABASE_URL=postgresql://postgres@localhost:5432/salesoptimizer_db
-
 # JWT Configuration
-JWT_SECRET_KEY=
+JWT_SECRET_KEY=your-super-secret-jwt-key-change-in-production-min-32-chars
 JWT_ALGORITHM=HS256
 JWT_EXPIRE_MINUTES=30
 REFRESH_TOKEN_EXPIRE_DAYS=7
-
 
 # Security
 ALLOWED_HOSTS=localhost,127.0.0.1
 CORS_ORIGINS=http://localhost:3000
 
-# Environment
-ENVIRONMENT=development
-LOG_LEVEL=INFO
-
-#OAuth2 Configuration
+# OAuth2 Configuration
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GITHUB_CLIENT_ID=
@@ -42,22 +46,27 @@ GITHUB_CLIENT_SECRET=
 MICROSOFT_CLIENT_ID=
 MICROSOFT_CLIENT_SECRET=
 
-# OAuth Redirect URLs
-GOOGLE_OAUTH_REDIRECT_URL=http://localhost:8000/api/v1/auth/oauth/google/callback
-GITHUB_OAUTH_REDIRECT_URL=http://localhost:8000/api/v1/auth/oauth/github/callback
-MICROSOFT_OAUTH_REDIRECT_URL=http://localhost:8000/api/v1/auth/oauth/microsoft/callback
+# OAuth Redirect URLs (will use BACKEND_URL if not specified)
+GOOGLE_OAUTH_REDIRECT_URL=
+GITHUB_OAUTH_REDIRECT_URL=
+MICROSOFT_OAUTH_REDIRECT_URL=
 
-# Application URLs
-FRONTEND_URL=http://localhost:3000
-BACKEND_URL=http://localhost:8000
-
-# Email Configuration (Mailtrap)
+# Email Configuration
 SMTP_HOST=sandbox.smtp.mailtrap.io
 SMTP_PORT=2525
 SMTP_USERNAME=
 SMTP_PASSWORD=
-SMTP_USE_TLS=true
+SMTP_USE_TLS=false
+SMTP_USE_STARTTLS=true
 
 # Email Defaults
-DEFAULT_FROM_EMAIL=admin@salesoptimizer.com
+DEFAULT_FROM_EMAIL=noreply@salesoptimizer.com
 DEFAULT_FROM_NAME=SalesOptimizer
+
+# Production Example Values (commented out)
+# ENVIRONMENT=production
+# DEBUG=false
+# FRONTEND_URL=https://salesoptimizer.com
+# BACKEND_URL=https://api.salesoptimizer.com
+# CORS_ORIGINS=https://salesoptimizer.com,https://www.salesoptimizer.com
+# ALLOWED_HOSTS=salesoptimizer.com,www.salesoptimizer.com,api.salesoptimizer.com
