--- a/web/package.json
+++ b/web/package.json
@@ -15,8 +15,11 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@types/js-cookie": "^3.0.6",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.400.0",
     "next": "^14.2.29",
     "react": "^18.3.1",
