--- a/web/package.json
+++ b/web/package.json
@@ -26,7 +26,8 @@
     "next": "^14.2.29",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwind-merge": "^2.2.0"
+    "tailwind-merge": "^2.2.0",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
