--- a/web/package.json
+++ b/web/package.json
@@ -17,16 +17,17 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.9.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.400.0",
     "next": "^14.2.29",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwind-merge": "^2.2.0",
+    "tailwind-merge": "^2.6.0",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
