--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.400.0",
     "next": "^14.2.29",
