--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 .env
-venv
+.venv/
 __pycache__/
 # Byte-compiled files doesn't make sense to be tracked
 *.py[cod]
 # C extensions
 web/node_modules/
 web/.next/
-web/.env.local/
+web/.env.local
